--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     text-align: center;
     margin: 0;
     color: whitesmoke;  
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Add background to hero section */
@@ -34,8 +35,8 @@ body{
 }
 
 #activities-title{
-    margin-top: 0;
-    padding-top: 20px;
+    margin: 0 0 40px 0;
+    padding-top: 40px;
 }
 #activities-section{
     background: #F1FAEE;
@@ -43,14 +44,18 @@ body{
     
 }
 
-#activities-container{
+#activities-container-main{
     display: flex;
     justify-content: space-around;
 }
 
-.activities-img{
+.activities-container-sub{
     width: 250px;
-    height: 250px;
+}
+
+.activities-img{
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
 }
 
